# snoopy-assistant

./: README.md  Team Agreement.md  requirements.md
snoopy-assistant/: pyproject.toml
snoopy-assistant/assets/: greeting.py  searches.py  sender.py  translator.py
snoopy-assistant/snoopy_assistant/: main.py
snoopy-assistant/snoopy_assistant/assets/: date_time.py  greeting.py  note.py  searches.py  sender.py  text.txt  translator.py
snoopy-assistant/tests/: test_snoopy_assistant.py
wireframe/: GUI-window.jpg:Zone.Identifier  GUI-window.png:Zone.Identifier
