
[tool.poetry]
name = "snoopy-assistant"
version = "0.1.0"
description = ""
authors = ["Ayman Naif <ayman_naif@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyttsx3 = "^2.90"
DateTime = "^4.3"
pygame = "^2.0.1"
playsound = "^1.2.2"
gTTS = "^2.2.3"
SpeechRecognition = "^3.8.1"
youtube_dl = "^2021.6.6"
wikipedia = "^1.4.0"
requests = "^2.25.1"
twilio = "^6.61.0"
googletrans = "^3.0.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
